--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@svgr/webpack": "^6.2.0",
     "autoprefixer": "^10.4.2",
     "babel-loader": "^8.2.3",
+    "copy-webpack-plugin": "^10.2.3",
     "css-loader": "^6.5.1",
     "cssnano": "^5.0.16",
     "html-webpack-plugin": "^5.5.0",
