--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-gallery-carousel": "^0.2.9",
     "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
@@ -25,6 +26,7 @@
     "copy-webpack-plugin": "^10.2.3",
     "css-loader": "^6.5.1",
     "cssnano": "^5.0.16",
+    "dotenv-webpack": "^7.1.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.5.3",
     "postcss": "^8.4.5",
