updated for local api

--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
 MAIN_TITLE='My Website Title'
 MAIN_EMAIL='contact@mySite.com'
-API='https://www.mywebsite.com/api'
-API_PUBLIC='https://www.mywebsite.com'
+
+API='http://localhost:8080/api'
+API_PUBLIC='http://localhost:8080'
+#API='https://www.mywebsite.com/api'
+#API_PUBLIC='https://www.mywebsite.com'
